...
              }),
            ),
          )
        ],
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('addTaskFAB'),
        child: const Icon(Icons.add),
        onPressed: () {
          Navigator.push(
            context,
            MaterialPageRoute(
              builder: (context) => AddTaskScreen(),
...
